[tool.poetry]
name = "fastapi-qp"
version = "0.1.0"
description = ""
authors = ["Henrique Cunha <henrycunh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.27.1"
pydantic = "^1.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
