[tool.poetry]
name = "fastapi-qp"
version = "0.2.0"
description = ""
authors = ["Henrique Cunha <henrycunh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = ">=0.75.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pydantic = "^1.9.1"
uvicorn = "^0.17.6"
pytest-cov = "^3.0.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
